Ejercicio 14.1 -Testing con Junit y sonarcube, tests de crud basicos